fix restart button visibility for mobile devices

--- a/main/http_server/axe-os/src/app/layout/styles/layout/_menu.scss
+++ b/main/http_server/axe-os/src/app/layout/styles/layout/_menu.scss
@@ -135,7 +135,6 @@
 }
 
 #restart {
-    bottom: 2rem;
-    position: absolute;
-    left: 8rem;
+    padding: 2rem 1rem;
+    display: block;
 }
